2004-09-27  Raja R Harinath  <rharinath@novell.com>

	* nunit20/nunit-console/Makefile (PROGRAM): Put in
	profile-specific directory.

2004-09-21  Raja R Harinath  <rharinath@novell.com>

	* Makefile (DIST_ONLY_SUBDIRS): Add 'gmcs' since it is specially
	handled by 'class/corlib/Makefile'.
	(test-installed-compiler): Run compiler tests using the installed
	compiler.

2004-09-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile (SUBDIRS): Allow to be overriden by $(TEST_SUBDIRS).
	(test-profiles, run-test-profiles): New targets.
	(test-compiler): Rename to ...
	(compiler-tests): ... this.  Run tests on all profiles.

2004-09-03  Martin Baulig  <martin@ximian.com>

	* Makefile (test-compiler): New target to run the compiler test.

2004-07-02  Raja R Harinath  <rharinath@novell.com>

	* Makefile (OVERRIDE_BARE_TARGETS): Remove.
	(OVERRIDE_TARGET_ALL): Define.
	(all-recursive,$(STD_TARGETS:=-recursive)): Depend on
	'platform-check' and 'profile-check'.
	(all.override): New.  Run two passes: once to build, and once to
	sign libraries.

2004-06-22  Todd Berman  <tberman@off.net>

	* configure: Patch from Mariano Suárez-Alvarez 
	<msuarezalvarez@arnet.com.ar> to make configure accept jhbuild style
	/prefix /usr options, and to continue past unknown options. Currently
	this patch is a bit spammy with multiple unknown options, anyone
	who is interested is welcome to fix this.

2004-06-14  Raja R Harinath  <rharinath@novell.com>

	* Makefile (all-profiles, clean-profiles): Simplify slightly.

2004-06-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile: added target run-test-ondotnet.

2004-05-26  Raja R Harinath  <rharinath@novell.com>

	* nunit20/util/Makefile (EXTRA_DISTFILES): Remove
	Transform.resources.
	($(the_lib)): Make Transform.resources using internal resgen.
	* nunit20/util/Transform.resources: Rebuild.

2004-05-25  Sebastien Pouliot  <sebastien@ximian.com>

	* nunit.key: New. NUnit private key. Due to build issues the key